# prd-skills

./: .gitignore  README.md  pm-ai-course.md
SkillOpt/: .env.example  .gitignore  CONTRIBUTING.md  README.md  mkdocs.yml  pyproject.toml  requirements.txt
SkillOpt/ckpt/: README.md
SkillOpt/ckpt/alfworld/: gpt5.5_skill.md
SkillOpt/ckpt/docvqa/: gpt5.5_skill.md
SkillOpt/ckpt/livemath/: gpt5.5_skill.md
SkillOpt/ckpt/officeqa/: gpt5.5_skill.md
SkillOpt/ckpt/searchqa/: gpt5.5_skill.md
SkillOpt/ckpt/spreadsheetbench/: gpt5.5_skill.md
SkillOpt/configs/_base_/: default.yaml
SkillOpt/configs/alfworld/: default.yaml
SkillOpt/configs/docvqa/: default.yaml
SkillOpt/configs/features/: soft_gate.yaml
SkillOpt/configs/livemathematicianbench/: default.yaml
SkillOpt/configs/officeqa/: default.yaml
SkillOpt/configs/searchqa/: default.yaml
SkillOpt/configs/spreadsheetbench/: default.yaml
SkillOpt/data/: README.md
SkillOpt/data/alfworld_path_split/: split_manifest.json
SkillOpt/data/docvqa_id_split/: split_manifest.json
SkillOpt/data/livemathematicianbench_id_split/: split_manifest.json
SkillOpt/data/officeqa_id_split/: split_manifest.json
SkillOpt/data/searchqa_id_split/: split_manifest.json
SkillOpt/data/spreadsheetbench_id_split/: split_manifest.json
SkillOpt/docs/: contributing.md  guideline.html  index.md
SkillOpt/docs/guide/: configuration.md  dl-analogy.md  first-experiment.md  installation.md  local-env-smoke.md  new-backend.md  new-benchmark.md  skill-document.md  training-loop.md
SkillOpt/docs/reference/: api.md  cli.md  config.md
SkillOpt/docs/sleep/: README.md  RESULTS.md
SkillOpt/plugins/: README.md  run-sleep.sh
SkillOpt/plugins/claude-code/: README.md
SkillOpt/plugins/codex/: README.md  install.sh
SkillOpt/scripts/: eval_only.py  materialize_searchqa.py  run_alfworld.sh  run_searchqa.sh  run_spreadsheetbench.sh  train.py
SkillOpt/skillopt/: __init__.py  config.py  types.py
SkillOpt/skillopt/envs/: base.py  (+1 more)
SkillOpt/skillopt_sleep/: __init__.py  backend.py  budget.py  config.py  consolidate.py  cycle.py  dream.py  gate.py  harvest.py  judges.py  llm_miner.py  mine.py  replay.py  rollout.py  scheduler.py  slow_update.py  staging.py  state.py
SkillOpt/skillopt_webui/: __main__.py  app.py
SkillOpt/tests/: test_json_utils.py  test_materialize_searchqa.py  test_qwen_backend.py  test_scoring.py  test_skill_aware_reflection.py  test_types.py  test_webui_env_preflight.py
(+324 files in other folders)
